# Ds_python

./: inventory_management.py  shopping_cart_manager.py  social_media_analytics.py  website_analytics.py
Advanced Backend Engineering/Basic Restaurant/: README.md  crud.py  database.py  main.py  requirements.txt  setup.py  test_api.py
Advanced Backend Engineering/Complete Food Delivery System with Enterprise Caching/: QUICK_START.md  README.md  crud.py  database.py  demo.py  enterprise_cache_config.py  main.py  (+5 more)
CRUD/: Enhanced University.py  Media Streaming.py  University Course.py
Food_Delivery_Enterprise_EC2/: QUICK_START.md  README.md  celery_app.py  crud.py  database.py  deploy_ec2.sh  main.py  models.py  requirements.txt  schemas.py  tasks.py
Pydantic + Database/: Restaurant Food.py  Simple Restaurant Ordering System.py
Restaurant_Advanced_Task_Processing_EC2/: models.py
Restaurant_Containerized_Cloud_DB/: .env.example  Dockerfile  README.md  alembic.ini  celery_app.py  config.py  crud.py  database.py  deploy_ec2.sh  docker-compose.yml  init.sql  main.py  models.py  nginx.conf  pyproject.toml  schemas.py  tasks.py
advanced_oops/: Advanced Vehicle.py  E-Commerce.py  Employee Management.py  Financial Trading.py
ds/: browser_history_deque.py  data_pairing_zip.py  data_processing_enumerate.py  grade_analyzer.py  membership_properties.py  sales_data_analysis.py  school_management_system.py  sorting_reversing.py  student_records.py
oops/: Bank Account.py  E-commerce.py  GradeManager.py  Student Course.py  TextAnalyzer.py  analyze_friendships.py
zomato_v1_celery/: .env.example  Dockerfile  QUICK_START.md  README.md  backup_restore.sh  celery_app.py  crud.py  database.py  deploy_ec2.sh  docker-compose.yml  main.py  models.py  monitoring.sh  nginx.conf  requirements.txt  schemas.py  tasks.py  worker.py
(+40 files in other folders)
